<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPromotionCodeActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <!-- FrameLayout for backBtn to increase its touch area -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/ic_back_white"
                android:contentDescription="@string/back_button_description" />
        </FrameLayout>

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_promotion_code"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/toolbarRl"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:src="@drawable/promotion" />

    <EditText
        android:id="@+id/promoCodeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageIv"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_discount_gray"
        android:drawablePadding="10dp"
        android:hint="@string/promotion_code"
        android:inputType="textCapWords"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray02" />

    <EditText
        android:id="@+id/promoDescriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promoCodeEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_discount_gray"
        android:drawablePadding="10dp"
        android:hint="@string/promotion_description"
        android:inputType="textCapSentences|textMultiLine"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray02" />

    <EditText
        android:id="@+id/promoPriceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promoDescriptionEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_cart_gray"
        android:drawablePadding="10dp"
        android:hint="@string/promotion_price"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray02" />

    <EditText
        android:id="@+id/minimumOrderPriceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/promoPriceEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_cart_gray"
        android:drawablePadding="10dp"
        android:hint="@string/minimum_order_price"
        android:inputType="numberDecimal"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray02" />

    <TextView
        android:id="@+id/expireDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/minimumOrderPriceEt"
        android:layout_margin="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_calendar_gray"
        android:drawablePadding="10dp"
        android:hint="Expire Date"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray02" />


    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expireDateTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:minWidth="150dp"
        android:text="Add"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>
