<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activities.PromotionCodesActivity">

    <!-- Toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <!-- FrameLayout for backBtn to increase its touch area -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/ic_back_white"
                android:contentDescription="@string/back_button_description" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Promotion Codes"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

        <!-- FrameLayout for addPromoBtn to increase its touch area -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/addPromoBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/ic_add_white"
                android:contentDescription="@string/add_promo_button" />
        </FrameLayout>

    </RelativeLayout>
    <!-- Filter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filteredTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rect02"
            android:padding="10dp"
            android:text="All Promotion Codes" />

        <ImageButton
            android:id="@+id/filterBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_filter_gray"
            android:contentDescription="@string/filter_button_description"/>
    </LinearLayout>

    <!-- Promotion Codes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/promoRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_promotion_shop" />


</LinearLayout>
