<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShopDetailsActivity">

    <FrameLayout
        android:id="@+id/shopRl"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/shopIv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/colorGray02"
            android:contentDescription="@string/shop_image_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#79000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/shopNameTv"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginTop="29dp"
                android:text="Shop Name"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shopNameTv"
                android:layout_marginStart="3dp"
                android:text="Phone"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTv"
                android:layout_marginStart="3dp"
                android:text="Email"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/openCloseTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:padding="5dp"
                android:text="Open"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/deliveryFeeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/openCloseTv"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:text="Delivery Fee"
                android:textColor="@color/colorWhite" />

<!--            Ratingbar: show avg rating-->
            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deliveryFeeTv"
                android:layout_alignParentEnd="true"
                android:numStars="5"
                android:progressBackgroundTint="@color/colorGray00"
                android:progressTint="@color/colorWhite" />


            <TextView
                android:id="@+id/addressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTv"
                android:layout_marginStart="3dp"
                android:text="Address"
                android:textColor="@color/colorWhite" />

            <!-- TextViews for Shop Details -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/callBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="23dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_call_white"
                    android:contentDescription="@string/call_button_desc" />

                <ImageButton
                    android:id="@+id/mapBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="23dp"
                    android:layout_marginStart="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_map_white"
                    android:contentDescription="@string/map_button_desc" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>


    <!-- Toolbar -->
    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect01"
        android:padding="8dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/cartBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_cart_gray"
            android:contentDescription="@string/logout_button_desc" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back_white"
            android:contentDescription="@string/back_button_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Shop Details"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

<!--        cart item count badge-->

        <TextView
            android:id="@+id/cartCountTv"
            android:textColor="@color/colorWhite"
            android:text="10"
            android:textSize="8sp"
            android:gravity="center"
            android:background="@drawable/shape_circle03"
            android:layout_alignParentEnd="true"
            android:layout_width="20dp"
            android:layout_height="20dp"/>

<!--        show shop review-->
        <ImageButton
            android:id="@+id/reviewsBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toStartOf="@id/cartBtn"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_star_white"
            android:background="@android:color/transparent"
            android:contentDescription="@string/reviews_button_description" />

    </RelativeLayout>

    <!-- Products Section -->
    <RelativeLayout
        android:id="@+id/productsRl"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/shopRl">

        <!-- Search -->
        <EditText
            android:id="@+id/searchProductEt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_toStartOf="@id/filterProductBtn"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_search_gray"
            android:drawablePadding="10dp"
            android:hint="Search"
            android:padding="10dp" />

        <!-- Filter Button -->
        <ImageButton
            android:id="@+id/filterProductBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter_gray"
            android:contentDescription="@string/filter_button_desc" />

        <!-- Filtered Products Title -->
        <TextView
            android:id="@+id/filteredProductsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchProductEt"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:text="Showing All"
            android:textColor="@color/colorBlack" />

        <!-- RecyclerView for Products -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/filteredProductsTv"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_product_seller" />
    </RelativeLayout>

</RelativeLayout>
